--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
-<head>
-    
+    <head>
+
     </head>
     <body>
         <script src="/d3/d3.min.js"></script>
-        <input type="file" id="file-input">
-        <p id="file-content">
-        </p>
         <script src="/js/functions.js"></script>
+        <script>
+            console.info(loadFile('/data_source/v1/common/technology/00_apocalypse_tech.txt'));
+        </script>
     </body>
 </html>
