--- a/importer/index.html
+++ b/importer/index.html
@@ -3,18 +3,12 @@
 
     </head>
     <body>
-        <script src="/d3/d3.min.js"></script>
-        <script src="/js/functions.js"></script>
+        <script src="../d3/d3.min.js"></script>
+        <script src="../js/functions.js"></script>
+        <div id="output"></div>
         <script>
-            var patterns = [
-                { "needle" : /(\t)/, "replace" : "" }
-
-            var jsonString = loadFile('/data_source/v1/common/technology/00_leviathans_tech.txt');
-
-            for(i = 0; i < patterns.length; i++){
-                jsonString = jsonString.replace(RegExp(patterns[i].needle, 'g'), patterns[i].replace);
-            }
-            console.info(jsonString);
+            getJsonStringFromData();
+            console.info(jsonData);
         </script>
     </body>
 </html>
