Fixed the importer :)

--- a/importer/index.html
+++ b/importer/index.html
@@ -3,12 +3,11 @@
 
     </head>
     <body>
+        <script src="../js/importer.js"></script>
         <script src="../d3/d3.min.js"></script>
         <script src="../js/functions.js"></script>
-        <div id="output"></div>
         <script>
-            getJsonStringFromData();
-            console.info(jsonData);
+            getJsonDataFeed();
         </script>
     </body>
 </html>
