Working but slow as hell

--- a/importer/index.html
+++ b/importer/index.html
@@ -5,9 +5,9 @@
     <body>
         <script src="../js/importer.js"></script>
         <script src="../d3/d3.min.js"></script>
+        <script src="../js/importer.js"></script>
         <script src="../js/functions.js"></script>
         <script>
-            getJsonDataFeed();
         </script>
     </body>
 </html>
