--- a/tech_ tree/index.html
+++ b/tech_ tree/index.html
@@ -13,11 +13,28 @@
         </style>
     </head>
     <body>
-        <script src="../d3/d3.min.js"></script>
-        <!-- Load the sankey.js function -->
+        <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/sankey.js"></script>
+        <script src="../js/importer.js"></script>
+        <script src="../js/functions.js"></script>
+
+        <div id="chartholder"></div>
         <script src="chart.js"></script>
 
-        <div id="chart"></div>
+        <!-- Add style to links or they won't appear properly-->
+        <style>
+            .link {
+                fill: none;
+                stroke: #000;
+                stroke-opacity: .2;
+            }
+            .link:hover {
+                stroke-opacity: .5;
+            }
+        </style>
+        <script>
+
+
+        </script>
     </body>
 </html>
