--- a/graph_cord.html
+++ b/graph_cord.html
@@ -2,9 +2,9 @@
     <head>
     </head>
     <body>
-        <script src="/d3/d3.min.js"></script>
+        <script src="https://d3js.org/d3.v4.js"></script>
         <script src="/js/importer.js"></script>
         <script src="/js/functions.js"></script>
-
+        <div id="my_dataviz"></div>
     </body>
 </html>
