--- a/importer/importer.html
+++ b/importer/importer.html
@@ -3,11 +3,9 @@
 
     </head>
     <body>
-        <script src="importer.js"></script>
+        <script src="../dist/js/index.js"></script>
         <p id="export"></p>
         <script>
-            getJsonDataFeed("export");
-            document.getElementById("export").innerHTML = jsonData;
         </script>
     </body>
 </html>
