--- a/extra/JSON for import/index.html
+++ b/extra/JSON for import/index.html
@@ -65,17 +65,19 @@
             }
             for(a=0;a<techJSON.length;a++){
                 for(b=0;b<techJSON[a].children.length;b++){
-                    techJSON[a].children[b].prerequisites_string = "";
-                    for(c=0;c<techJSON[a].children[b].prerequisites_names.length;c++){
-                        if(c>0){techJSON[a].children[b].prerequisites_string += ",";}
-                        techJSON[a].children[b].prerequisites_string += techJSON[a].children[b].prerequisites_names[c].name;
-                    }
-                    techJSON[a].children[b].children_string = "";
-                    for(d=0;d<techJSON[a].children[b].children.length;d++){
-                        if(d>0){techJSON[a].children[b].children_string += ",";}
-                        techJSON[a].children[b].children_string += techJSON[a].children[b].children[d].name;
-                    }
                     techJSON.push(techJSON[a].children[b]);
+                }
+            }
+            for(a=0;a<techJSON.length;a++){
+                techJSON[a].prerequisites_string = "";
+                techJSON[a].children_string = "";
+                for(b=0;b<techJSON[a].prerequisites_names.length;b++){
+                    if(b>0){techJSON[a].prerequisites_string += ",";}
+                    techJSON[a].prerequisites_string += techJSON[a].prerequisites_names[b].name;
+                }
+                for(b=0;b<techJSON[a].children.length;b++){
+                    if(b>0){techJSON[a].children_string += ",";}
+                    techJSON[a].children_string += techJSON[a].children[b].name;
                 }
             }
             console.log("----------------------------Output----------------------------")
